<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_quiz"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ca.alexcochrane.quizbuilder.QuizActivity"
    android:orientation="vertical">
    <TextView
        android:id="@+id/questionText"
        android:layout_width="match_parent"
        android:layout_height="0dp" 
        android:layout_weight="2"/>
    <TextView
        android:id="@+id/possibleAnswers"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"/>
    <android.support.v7.widget.ButtonBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <Button
            android:id="@+id/button1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="16dp"
            style="@style/quizButtonStyle"
            android:onClick="onClick"
            android:text="@string/A"/>
        <Button
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="16dp"
            style="@style/quizButtonStyle"
            android:onClick="onClick"
            android:text="@string/B"/>
    </android.support.v7.widget.ButtonBarLayout>
    <android.support.v7.widget.ButtonBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <Button
            android:id="@+id/button3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="16dp"
            style="@style/quizButtonStyle"
            android:onClick="onClick"
            android:text="@string/C"/>
        <Button
            android:id="@+id/button4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="16dp"
            style="@style/quizButtonStyle"
            android:onClick="onClick"
            android:text="@string/D"/>
    </android.support.v7.widget.ButtonBarLayout>
</LinearLayout>
